# github-automatic-tag

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: create_tag.yml
app/: main.py
scripts/: git_update_tag.sh
