[tool.poetry]
name = "github-tag"
version = "0.1.0"
description = ""
authors = ["Nayan Biswas <nayan32biswas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.98.0"
uvicorn = {extras = ["standard"], version = "0.21.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
